test with 3 concentric cylinder

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Three.js Boilerplate</title>
+        <title>Three.js - Audio Experiment</title>
     </head>
     <body>
         <div id="main"></div>
