--- a/app/index.html
+++ b/app/index.html
@@ -4,5 +4,39 @@
     </head>
     <body>
         <div id="main"></div>
+
+        <div id="option-container">
+
+            <div id="slider-nb-cylindre">
+                <label for="nb-cylindre">Nombre de Cylindre</label>
+                <input id="nb-cylindre" type="range" min="1" max="20" step="1">
+            </div>
+
+            <div id="slider-nb-group">
+                <label for="nb-group">Nombre de group</label>
+                <input id="nb-group" type="range" min="1" max="30" step="1">
+            </div>
+
+            <div id="slider-nb-line">
+                <label for="nb-line">Nombre de Ligne</label>
+                <input id="nb-line" type="range" min="1" max="20" step="1">
+            </div>
+
+            <div id="slider-group-width">
+                <label for="group-width">Largeur Groupe</label>
+                <input id="group-width" type="range" min="0" max="20" step="1">
+            </div>
+
+            <div id="slider-spirale-radius">
+                <label for="spirale-radius">Rayon spirale</label>
+                <input id="spirale-radius" type="range" min="1" max="50" step="1">
+            </div>
+
+            <div id="slider-circle-radius">
+                <label for="circle-radius">Rayon cercle</label>
+                <input id="circle-radius" type="range" min="1" max="50" step="1">
+            </div>
+
+        </div>
     </body>
 </html>
