add button radio for position

--- a/app/index.html
+++ b/app/index.html
@@ -24,18 +24,34 @@
 
             <div id="slider-group-width">
                 <label for="group-width">Largeur Groupe</label>
-                <input id="group-width" type="range" min="0" max="20" step="1">
+                <input id="group-width" type="range" min="1" max="20" step="1">
             </div>
 
             <div id="slider-spirale-radius">
-                <label for="spirale-radius">Rayon spirale</label>
-                <input id="spirale-radius" type="range" min="1" max="50" step="1">
+                <label for="spirale-radius">Rayon Spirale</label>
+                <input id="spirale-radius" type="range" min="1" max="80" step="1">
             </div>
 
             <div id="slider-circle-radius">
-                <label for="circle-radius">Rayon cercle</label>
+                <label for="circle-radius">Rayon Cercle</label>
                 <input id="circle-radius" type="range" min="1" max="50" step="1">
             </div>
+
+            <div id="radio-circle-position">
+                <label for="circle-position">Position Cercle</label>
+                <input id="circle-position" type="radio"name="position">
+            </div>
+
+            <div id="radio-line-position">
+                <label for="line-position">Position Ligne</label>
+                <input id="line-position" type="radio" name="position">
+            </div>
+
+            <div id="radio-spirale-position">
+                <label for="spirale-position">Position Spirale</label>
+                <input id="spirale-position" type="radio" name="position">
+            </div>
+
 
         </div>
     </body>
