new animation on kick for spirale position

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,11 @@
                 <input id="circle-radius" type="range" min="1" max="50" step="1">
             </div>
 
+            <div id="slider-color-speed">
+            <label for="color-speed">Vitesse Couleur</label>
+            <input id="color-speed" type="range" min="-4" max="4" step="0.2">
+        </div>
+
             <div id="radio-circle-position">
                 <label for="circle-position">Position Cercle</label>
                 <input id="circle-position" type="radio"name="position">
