--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,12 @@
         <title>Three.js - Audio Experiment</title>
     </head>
     <body>
+        <div id="intro-container">
+            <button id="intro-button">Commencer</button>
+        </div>
+
+
+
         <div id="main"></div>
 
         <div id="option-container">
