intro - multicolor circle animation

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,17 @@
     </head>
     <body>
         <div id="intro-container">
+
+            <div id="intro-circles">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+
             <button id="intro-button">Commencer</button>
         </div>
 
@@ -17,6 +28,8 @@
                 <label for="nb-cylindre">Nombre de Cylindre</label>
                 <input id="nb-cylindre" type="range" min="1" max="20" step="1">
             </div>
+
+
 
             <div id="slider-nb-group">
                 <label for="nb-group">Nombre de group</label>
