intro - progress with circle animation

--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,13 @@
                 <div class="circle"></div>
                 <div class="circle"></div>
                 <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
             </div>
 
-            <button id="intro-button">Commencer</button>
+            <div id="intro-progress">0%</div>
+            <div id="intro-begin">GO !</div>
         </div>
 
 
