--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <title>Three.js - Audio Experiment</title>
+        <link rel="icon" href="./favicon.png" type="image/png">
     </head>
     <body>
         <div id="intro-container">
